--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -1,26 +1,46 @@
-﻿<Window x:Class="WSUI.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Controls:MetroWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:cal="http://www.codeplex.com/CompositeWPF"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        mc:Ignorable="d"
+    
+    xmlns:cal="http://www.codeplex.com/CompositeWPF"
+    x:Class="WSUI.MainWindow"
+    Title="Windows Search" Height="450" Width="725" MinHeight="450" MinWidth="725">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro.Resources;component/Icons.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    
+    
+    <Grid Margin="14">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="0.15*" />
             <ColumnDefinition Width="0.5*" />
             <ColumnDefinition Width="1"/>
             <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
-        <ContentControl Grid.Row="0" Grid.ColumnSpan="2" 
+        <ContentControl Grid.Row="0" Grid.ColumnSpan="4" Margin="7"
                         cal:RegionManager.RegionName="SearchRegion"/>
-        <ContentControl Grid.Row="1" Grid.Column="0"
+        <ContentControl Grid.Row="1" Grid.Column="0" Margin="7"
                         cal:RegionManager.RegionName="StrategyRegion"/>
-        <ContentControl Grid.Row="0" Grid.Column="1"
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="7"
                         cal:RegionManager.RegionName="DataRegion"/>
-        <ContentControl Grid.Row="0" Grid.Column="3"
+        <ContentControl Grid.Row="1" Grid.Column="3" Margin="7"
                         cal:RegionManager.RegionName="PreviewRegion"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
