--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -6,14 +6,42 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              
              >
+    <Controls:MetroContentControl.Resources>
+        <Style x:Key="InvisibleHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
+        
+    </Controls:MetroContentControl.Resources>
     <Grid>
         <ListView ItemsSource="{Binding Path=DataSource}" BorderThickness="0"
-                  SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
+                  SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  
+                  >
             <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="From" DisplayMemberBinding="{Binding Recepient}"/>
-                    <GridViewColumn Header="Subject" DisplayMemberBinding="{Binding Subject}"/>
-                    <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Date}"/>
+                <GridView ColumnHeaderContainerStyle="{StaticResource InvisibleHeaderStyle}">
+                    <GridViewColumn>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Vertical" Margin="2">
+                                    <TextBlock Text="{Binding Recepient}" FontWeight="Bold"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontStyle="Italic">Emails: </TextBlock>
+                                        <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red"></TextBlock>
+                                    </StackPanel>
+                                </StackPanel>
+                            </DataTemplate>        
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Subject}">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Margin="2">
+                                    <TextBlock Text="{Binding Subject}" FontStyle="Italic" FontWeight="Bold"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Date}"/>
                 </GridView>
             </ListView.View>
         </ListView>
