--- a/WSUI.Module/View/EmailSettingsView.xaml
+++ b/WSUI.Module/View/EmailSettingsView.xaml
@@ -7,15 +7,18 @@
              >
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.85*" />
+            <ColumnDefinition Width="0.15*"/>
+            <ColumnDefinition Width="0.55*" />
             <ColumnDefinition Width="0.15*" />
+            <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
 
         <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                 Controls:TextboxHelper.Watermark="Enter Search Criteria"
-                Controls:TextboxHelper.ClearTextButton="True"/>
+                Controls:TextboxHelper.ClearTextButton="True"
+                 Grid.Column="1"/>
         <Button Command="{Binding Path=SearchCommand}" Content="Search" HorizontalAlignment="Stretch"
-                Grid.Column="1" />
+                Grid.Column="2" />
 
     </Grid>
 </Controls:MetroContentControl>
