--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -4,13 +4,115 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             xmlns:service="clr-namespace:WSUI.Module.Service"
              >
+    <Controls:MetroContentControl.Resources>
+        <Style x:Key="InvisibleHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Visibility" Value="Collapsed" />
+        </Style>
+        
+        <Style x:Key="ImageStyle" TargetType="{x:Type Image}">
+            <Setter Property="Width"  Value="20"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        
+        
+        <DataTemplate x:Key="NoneTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.25*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Image Grid.Column="0" Source="..\Images\document-smiley-sad.png" Style="{StaticResource ImageStyle}"/>
+                <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                <TextBlock Text="{Binding Path=Path}" Grid.Column="2" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EmailTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}"/>
+                <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                <TextBlock Text="{Binding Path=Path}" Grid.Column="2" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="UserTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Image Grid.Column="0" Source="..\Images\user.png" Style="{StaticResource ImageStyle}"/>
+                <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                <TextBlock Text="{Binding Path=Path}" Grid.Column="2" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="FileTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Image Grid.Column="0" Source="..\Images\document.png" Style="{StaticResource ImageStyle}"/>
+                <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                <TextBlock Text="{Binding Path=Path}" Grid.Column="2" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="AttachmentTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Image Grid.Column="0" Source="..\Images\document.png" Style="{StaticResource ImageStyle}"/>
+                <TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>
+                <TextBlock Text="{Binding Path=Path}" Grid.Column="2" Margin="5"/>
+            </Grid>
+        </DataTemplate>
+        
+        <service:AllFilesDataTemplateSelector x:Key="templateSelector"
+            NoneTemplate="{StaticResource ResourceKey=NoneTemplate}"
+            EmailTemplate="{StaticResource ResourceKey=EmailTemplate}"
+            UserTemplate="{StaticResource ResourceKey=UserTemplate}"
+            FileTemplate="{StaticResource ResourceKey=FileTemplate}"
+            AttachmentTemplate="{StaticResource ResourceKey=AttachmentTemplate}"
+            />
+
+    </Controls:MetroContentControl.Resources>
     <Grid>
-        <ListView ItemsSource="{Binding DataSource}">
-            <GridView>
-                <GridViewColumn Header="Name" />
-                <GridViewColumn Header="Information"/>
-            </GridView>
-        </ListView>
+        <ListBox ItemsSource="{Binding DataSource,UpdateSourceTrigger=PropertyChanged}"
+                 ItemTemplateSelector="{StaticResource templateSelector}"
+                 SelectedItem="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                 >
+            
+        </ListBox>
     </Grid>
 </Controls:MetroContentControl>
