--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -4,36 +4,84 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             
+             x:Name="this"
+                              
              >
+    <Controls:MetroContentControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="..\Service\ResourceTemplate.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+
+            <Style
+                x:Key="LinkButton"
+                TargetType="Button">
+                            <Setter
+                    Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate
+                            TargetType="Button">
+                                        <TextBlock
+                                TextDecorations="Underline">
+                            <ContentPresenter /></TextBlock>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter
+                    Property="Foreground"
+                    Value="Blue" />
+                            <Style.Triggers>
+                                <Trigger
+                        Property="IsMouseOver"
+                        Value="true">
+                                    <Setter
+                            Property="Foreground"
+                            Value="Red" />
+                                </Trigger>
+                            </Style.Triggers>
+            </Style>
+
+
+
+        </ResourceDictionary>
+    </Controls:MetroContentControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.75*"/>
-            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.60*"/>
+            <ColumnDefinition Width="0.40*"/>
         </Grid.ColumnDefinitions>  
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*"/>
-            <RowDefinition Height="0.25*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="0.25*"/>
             <RowDefinition Height="0.25*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Grid.Column="0"/>
-        <StackPanel Grid.Row="0" Grid.Column="1"  Orientation="Vertical">
-            <ItemsControl>
-                
+        <Image Grid.Row="0" Grid.Column="0" Source="{Binding Contact.Foto,UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+        <StackPanel Grid.Row="0" Grid.Column="1"  Orientation="Vertical" Margin="5">
+            <ItemsControl ItemsSource="{Binding Path=Contact.EmailList,UpdateSourceTrigger=PropertyChanged}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button Style="{StaticResource LinkButton}" Command="{Binding Path=DataContext.EmailClickCommand,ElementName=this}" 
+                                CommandParameter="{Binding}" Content="{Binding}"></Button>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
             </ItemsControl>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0"  Grid.ColumnSpan="2">
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0"  Grid.ColumnSpan="2" Margin="4">
             <TextBlock Text="Contact name:"  FontWeight="Bold"/>
-            <TextBlock Text="{Binding}" />
+            <TextBlock Text="{Binding Path=Contact.Name,UpdateSourceTrigger=PropertyChanged}" Margin="4" 
+                       Foreground="Blue"/>
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2">
-            <TextBlock Text="Contact's emails: " Margin="4" FontStyle="Italic"></TextBlock>
-            <ListView ItemsSource="{Binding DataSource}">
-            
-            
-            </ListView>
+            <TextBlock Text="Contact's emails: " Margin="4" FontStyle="Italic" FontWeight="Bold" FontSize="14"></TextBlock>
+            <ListBox ItemsSource="{Binding DataSource,UpdateSourceTrigger=PropertyChanged}"
+                      ItemTemplateSelector="{StaticResource templateSelector}"
+                      SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                      >
+
+
+            </ListBox>
         </StackPanel>
         
     </Grid>
