--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -45,7 +45,7 @@
 
         </ResourceDictionary>
     </Controls:MetroContentControl.Resources>
-    <Grid>
+    <Grid IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.60*"/>
             <ColumnDefinition Width="0.40*"/>
