--- a/WSUI.Module/View/PreviewView.xaml
+++ b/WSUI.Module/View/PreviewView.xaml
@@ -6,16 +6,26 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:preview="clr-namespace:C4F.DevKit.PreviewHandler.PreviewHandlerHost;assembly=WSPreview"
              mc:Ignorable="d" 
+             SizeChanged="MetroContentControl_SizeChanged"
              >
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <WindowsFormsHost Grid.Row="1">
-            <preview:PreviewHandlerHostControl x:Name="previewCtrl"/>
+
+        <WindowsFormsHost Grid.Row="1" x:Name="_preview">
+            <preview:PreviewHandlerHostControl x:Name="_previewControl">
+            </preview:PreviewHandlerHostControl >
         </WindowsFormsHost>
-        
+        <Popup Name="popup" IsOpen="False" 
+               VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+               PlacementTarget="{Binding ElementName=_previewControl}" 
+               AllowsTransparency="True"
+               >
+            <Grid Background="Gray" Opacity="0.75">
+                <TextBlock>Test</TextBlock>
+            </Grid>
+        </Popup>    
     </Grid>
 </Controls:MetroContentControl>
