--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -22,33 +22,34 @@
         </ResourceDictionary>
     </Window.Resources>
     
-    
-    <Grid Margin="14">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.15*" />
-            <ColumnDefinition Width="0.5*" />
-            <ColumnDefinition Width="2"/>
-            <ColumnDefinition Width="0.5*"/>
-        </Grid.ColumnDefinitions>
-        <ContentControl Grid.Row="0" Grid.ColumnSpan="4" Margin="4"
-                        cal:RegionManager.RegionName="SearchRegion"/>
-        <ContentControl Grid.Row="1" Grid.Column="0" Margin="4"
-                        cal:RegionManager.RegionName="StrategyRegion"/>
-        <ContentControl Grid.Row="1" Grid.Column="1" Margin="4"
-                        cal:RegionManager.RegionName="DataRegion"/>
-        <ContentControl Grid.Row="1" Grid.Column="3" Margin="4"
-                        cal:RegionManager.RegionName="PreviewRegion"/>
-        <!--<GridSplitter Grid.Row="1"
-                      Grid.Column="2"
-                      Width="2"
-                      HorizontalAlignment="Stretch"
-                      Background="LightBlue"
-                      ResizeBehavior="BasedOnAlignment"
-                      ResizeDirection="Columns" />-->
+    <AdornerDecorator>
+        <Grid Margin="7" x:Name="grid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.15*" />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="2"/>
+                <ColumnDefinition Width="0.5*"/>
+            </Grid.ColumnDefinitions>
+            <ContentControl Grid.Row="0" Grid.ColumnSpan="4" Margin="4"
+                            cal:RegionManager.RegionName="SearchRegion"/>
+            <ContentControl Grid.Row="1" Grid.Column="0" Margin="4"
+                            cal:RegionManager.RegionName="StrategyRegion"/>
+            <ContentControl Grid.Row="1" Grid.Column="1" Margin="4"
+                            cal:RegionManager.RegionName="DataRegion"/>
+            <ContentControl Grid.Row="1" Grid.Column="3" Margin="4"
+                            cal:RegionManager.RegionName="PreviewRegion"/>
+            <!--<GridSplitter Grid.Row="1"
+                          Grid.Column="2"
+                          Width="2"
+                          HorizontalAlignment="Stretch"
+                          Background="LightBlue"
+                          ResizeBehavior="BasedOnAlignment"
+                          ResizeDirection="Columns" />-->
         
-    </Grid>
+        </Grid>
+    </AdornerDecorator>
 </Controls:MetroWindow>
